solve flickering

--- a/app/components/nav-link/NavLink.module.css
+++ b/app/components/nav-link/NavLink.module.css
@@ -40,11 +40,6 @@
   transition: all 0.5s ease;
 }
 
-.nav_link_wrapper:hover .nav_link_background {
-  top: -0.4rem;
-  left: -0.4rem;
-  color: var(--highlight-color);
-}
 
 .nav_link {
   position: relative; /* Added to ensure proper stacking context */
