--- a/app/globals.css
+++ b/app/globals.css
@@ -51,6 +51,7 @@ body {
   100% {
     opacity: 0;
     z-index: -99999999999;
+    display: none;
   }
 }
 
